# pothole-severity-detection

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: README.md
configs/experiments/: yolov12n_cpu_100e_416_b2.yaml  yolov12n_cpu_100e_plus_60e_416_b2_gentle_aug.yaml  yolov12n_cpu_40e_416_b2.yaml  yolov12n_cpu_smoke.yaml
docs/: experiments.md
scripts/: analyze_yolov12_errors.py  check_torch_device.py  check_yolo.py  create_prediction_report.py  evaluate_yolov12.py  inspect_experiment_config.py  predict_yolov12.py  run_gradio_app.py  train_yolov12.py  train_yolov12_smoke.py
src/pothole_severity_detection/: __init__.py
src/pothole_severity_detection/apps/: gradio_app.py
src/pothole_severity_detection/inference/: detector.py  model_loader.py  severity.py
tests/: test_config_files.py  test_detection_summary.py  test_media_utils.py  test_model_loader.py  test_severity.py
