[project]
name = "pothole-severity-detection"
version = "0.1.0"
description = "Computer vision project for pothole detection with severity-oriented analysis, training pipelines, and evaluation workflows."
readme = "README.md"
authors = [
    { name = "Michał Maj", email = "michalpmaj@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "gradio>=6.13.0",
    "huggingface-hub>=1.11.0",
    "matplotlib>=3.10.9",
    "numpy>=1.26.4,<2.0.0",
    "opencv-python==4.10.0.84",
    "roboflow>=1.3.5",
    "scipy>=1.17.1",
    "supervision>=0.27.0.post2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics",
]

keywords = [
    "computer-vision",
    "object-detection",
    "pothole-detection",
    "severity-estimation",
    "yolo",
    "mlops"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition"
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
ultralytics = { git = "https://github.com/sunsmarterjie/yolov12.git" }
